# gamedev

./: .gitignore  CMakeLists.txt
core/: CMakeLists.txt
core/Common/: InputMap.cpp  InputMap.hpp  ReturnCodes.hpp  Vector.hpp
core/EntityComponentSystem/: AnimationComponent.cpp  AnimationComponent.hpp  BoundingBoxComponent.cpp  BoundingBoxComponent.hpp  Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  LogicComponent.cpp  LogicComponent.hpp  OrientationComponent.cpp  OrientationComponent.hpp  PositionComponent.cpp  PositionComponent.hpp  ScaleComponent.cpp  ScaleComponent.hpp  TextureComponent.cpp  TextureComponent.hpp  VelocityComponent.cpp  VelocityComponent.hpp
core/FrameworkSystems/: InitializationSystem.cpp  InitializationSystem.hpp  InputSystem.cpp  InputSystem.hpp  LogicSystem.cpp  LogicSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  System.cpp  System.hpp
core/MessageBus/: Message.hpp  MessageBus.cpp  MessageBus.hpp
core/Scene/: Scene.cpp  Scene.hpp
sandbox/: CMakeLists.txt  CustomInitializationSystem.cpp  CustomInitializationSystem.hpp  PlayerLogicComponent.cpp  PlayerLogicComponent.hpp  main.cpp
